# mystini

./: CMakeLists.txt  LICENSE  test.ini
src/: ActionDel.cpp  ActionDel.h  ActionGet.cpp  ActionGet.h  ActionSet.cpp  ActionSet.h  CMakeLists.txt  OutputFormat.h  OutputFormatIni.cpp  OutputFormatIni.h  OutputFormatLines.cpp  OutputFormatLines.h  OutputFormatPlain.cpp  OutputFormatPlain.h  OutputFormatSh.cpp  OutputFormatSh.h  Subcommand.cpp  Subcommand.h  Utils.cpp  Utils.h  consts.h  inipp.h  main.cpp  mystini.1.md
